--- a/apply-step2.html
+++ b/apply-step2.html
@@ -47,59 +47,59 @@
                             <div class="fg1_inner">
                                 <div class="form_style1">
                                     <ul data-uk-grid>
-                                        <li class="fs1_item uk-width-1-2">
+                                        <li class="fs1_item uk-width-1-1">
                                             <div class="uk-grid uk-child-width-1-2">
                                                 <div>
-                                                    <label class="fs1_label" for="t0">نام و نام خانوادگی :</label>
+                                                    <label class="fs1_label" for="t0">نام و نام خانوادگی</label>
                                                     <input type="text" id="t0" autocomplete="off"/>
                                                 </div>
                                                 <div>
-                                                    <label class="fs1_label " for="t7">سمت در تیم :</label>
+                                                    <label class="fs1_label " for="t7">سمت در تیم</label>
                                                     <input type="text" id="t7" autocomplete="off"/>
                                                 </div>
                                             </div>
                                             <div class="uk-grid uk-child-width-1-2">
                                                 <div>
-                                                    <label class="fs1_label" for="t2">نام و نام خانوادگی :</label>
+                                                    <label class="fs1_label" for="t2">نام و نام خانوادگی</label>
                                                     <input type="text" id="t2" autocomplete="off"/>
                                                 </div>
                                                 <div>
-                                                    <label class="fs1_label " for="t8">سمت در تیم :</label>
+                                                    <label class="fs1_label " for="t8">سمت در تیم</label>
                                                     <input type="text" id="t8" autocomplete="off"/>
                                                 </div>
                                             </div>
                                             <div class="uk-grid uk-child-width-1-2">
                                                 <div>
-                                                    <label class="fs1_label" for="t3">نام و نام خانوادگی :</label>
+                                                    <label class="fs1_label" for="t3">نام و نام خانوادگی</label>
                                                     <input type="text" id="t3" autocomplete="off"/>
                                                 </div>
                                                 <div>
-                                                    <label class="fs1_label " for="t9">سمت در تیم :</label>
+                                                    <label class="fs1_label " for="t9">سمت در تیم</label>
                                                     <input type="text" id="t9" autocomplete="off"/>
                                                 </div>
                                             </div>
                                             <div class="uk-grid uk-child-width-1-2">
                                                 <div>
-                                                    <label class="fs1_label" for="t4">نام و نام خانوادگی :</label>
+                                                    <label class="fs1_label" for="t4">نام و نام خانوادگی</label>
                                                     <input type="text" id="t4" autocomplete="off"/>
                                                 </div>
                                                 <div>
-                                                    <label class="fs1_label " for="t10">سمت در تیم :</label>
+                                                    <label class="fs1_label " for="t10">سمت در تیم</label>
                                                     <input type="text" id="t10" autocomplete="off"/>
                                                 </div>
                                             </div>
                                             <div class="uk-grid uk-child-width-1-2">
                                                 <div>
-                                                    <label class="fs1_label" for="t5">نام و نام خانوادگی :</label>
+                                                    <label class="fs1_label" for="t5">نام و نام خانوادگی</label>
                                                     <input type="text" id="t5" autocomplete="off"/>
                                                 </div>
                                                 <div>
-                                                    <label class="fs1_label " for="t6">سمت در تیم :</label>
+                                                    <label class="fs1_label " for="t6">سمت در تیم</label>
                                                     <input type="text" id="t6" autocomplete="off"/>
                                                 </div>
                                             </div>
                                         </li>
-                                        <li class="fs1_item uk-width-1-2">
+                                        <li class="fs1_item uk-width-1-1">
                                             <div data-uk-grid class="uk-child-width-1-1">
                                                 <div>
                                                     <label class="fs1_label req" for="t11">
@@ -110,8 +110,7 @@
                                                     <textarea id="t11" data-autosize></textarea>
                                                 </div>
                                                 <div>
-                                                    <label class="fs1_label req" for="t12">تعداد افراد شاغل در استارت آپ
-                                                        :</label>
+                                                    <label class="fs1_label req" for="t12">تعداد افراد شاغل در استارت آپ</label>
                                                     <input type="text" id="t12" autocomplete="off"/>
                                                 </div>
                                                 <div>
@@ -124,10 +123,9 @@
                                                 </div>
                                             </div>
                                         </li>
-                                        <li class="fs1_item uk-width-1-2">
+                                        <li class="fs1_item uk-width-1-1">
                                             <label class="fs1_label req" for="t14">
                                                 نحوه فعالیت اعضای تیم شما چطونه است ؟
-                                                <br>
                                                 <small style="font-size: 75%">( تمام وقت / پاره وقت / از راه دور و...
                                                     نام
                                                     هریک از اعضا - نوع فعالیت - توضیح كوتاهی از دلیل آن)
@@ -135,10 +133,9 @@
                                             </label>
                                             <textarea id="t14" data-autosize></textarea>
                                         </li>
-                                        <li class="fs1_item uk-width-1-2">
+                                        <li class="fs1_item uk-width-1-1">
                                             <label class="fs1_label req" for="t15">
                                                 تیم خود را چگونه توصیف میکنید؟
-                                                <br>
                                                 <small>
                                                     (ویژگی بارز و یا تفاوت عمده شما با تیم هاي دیگر)
                                                 </small>
