--- a/apply.html
+++ b/apply.html
@@ -47,28 +47,28 @@
                             <div class="fg1_inner">
                                 <div class="form_style1">
                                     <ul data-uk-grid>
-                                        <li class="fs1_item uk-width-1-3">
-                                            <label class="fs1_label req" for="p0">نام و نام خانوادگی :</label>
+                                        <li class="fs1_item uk-width-1-2">
+                                            <label class="fs1_label req" for="p0">نام و نام خانوادگی</label>
                                             <input type="text" id="p0" autocomplete="off"/>
                                         </li>
-                                        <li class="fs1_item uk-width-1-3">
-                                            <label class="fs1_label req" for="p1">رشته تحصیلی :</label>
+                                        <li class="fs1_item uk-width-1-2">
+                                            <label class="fs1_label req" for="p1">رشته تحصیلی</label>
                                             <input type="text" id="p1" autocomplete="off"/>
                                         </li>
-                                        <li class="fs1_item uk-width-1-3">
-                                            <label class="fs1_label req" for="p2">دانشگاه :</label>
+                                        <li class="fs1_item uk-width-1-2">
+                                            <label class="fs1_label req" for="p2">دانشگاه</label>
                                             <input type="text" id="p2" autocomplete="off"/>
                                         </li>
-                                        <li class="fs1_item uk-width-1-3">
-                                            <label class="fs1_label req" for="p3">وضعیت نظام وظیفه :</label>
+                                        <li class="fs1_item uk-width-1-2">
+                                            <label class="fs1_label req" for="p3">وضعیت نظام وظیفه</label>
                                             <input type="text" id="p3" autocomplete="off"/>
                                         </li>
-                                        <li class="fs1_item uk-width-1-3">
-                                            <label class="fs1_label req" for="p4">شماره همراه :</label>
+                                        <li class="fs1_item uk-width-1-2">
+                                            <label class="fs1_label req" for="p4">شماره همراه</label>
                                             <input type="text" id="p4" autocomplete="off"/>
                                         </li>
-                                        <li class="fs1_item uk-width-1-3">
-                                            <label class="fs1_label req" for="p5">نشانی ایمیل :</label>
+                                        <li class="fs1_item uk-width-1-2">
+                                            <label class="fs1_label req" for="p5">نشانی ایمیل</label>
                                             <input type="text" id="p5" autocomplete="off"/>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
