Edit: add remove team member field

--- a/apply.html
+++ b/apply.html
@@ -36,7 +36,7 @@
                                 <div class="pts1_step">
                                     <span class="pts1_shape"></span>
                                     <span class="pts1_text">
-                                        اطلاعات استارت آپ
+                                        اطلاعات استارتاپ
                                     </span>
                                 </div>
                             </li>
@@ -48,41 +48,40 @@
                                 <div class="form_style1">
                                     <ul data-uk-grid>
                                         <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label req" for="p0">نام و نام خانوادگی</label>
+                                            <label class="fs1_label" for="p0">نام و نام خانوادگی</label>
                                             <input type="text" id="p0" autocomplete="off"/>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label req" for="p1">رشته تحصیلی</label>
+                                            <label class="fs1_label" for="p9">مقطع تحصیلی</label>
+                                            <input type="text" id="p9" autocomplete="off"/>
+                                        </li>
+                                        <li class="fs1_item uk-width-1-2">
+                                            <label class="fs1_label" for="p1">رشته تحصیلی</label>
                                             <input type="text" id="p1" autocomplete="off"/>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label req" for="p2">دانشگاه</label>
+                                            <label class="fs1_label" for="p2">دانشگاه</label>
                                             <input type="text" id="p2" autocomplete="off"/>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label req" for="p3">وضعیت نظام وظیفه</label>
+                                            <label class="fs1_label" for="p3">وضعیت نظام وظیفه</label>
                                             <input type="text" id="p3" autocomplete="off"/>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label req" for="p4">شماره همراه</label>
+                                            <label class="fs1_label" for="p4">شماره همراه</label>
                                             <input type="text" id="p4" autocomplete="off"/>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label req" for="p5">نشانی ایمیل</label>
+                                            <label class="fs1_label" for="p5">نشانی ایمیل</label>
                                             <input type="text" id="p5" autocomplete="off"/>
-                                        </li>
-                                        <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label" for="p6">مهمترین دستاورد شما تا حالا چه چیزی
-                                                بوده ؟ </label>
-                                            <textarea id="p6" data-autosize></textarea>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
                                             <label class="fs1_label">تخصص شما در کدام حوزه است ؟</label>
                                             <ul class="uk-flex  uk-flex-around">
                                                 <li>
                                                     <div class="check_style1">
-                                                        <label><input class="uk-checkbox" type="checkbox" checked> توسعه
-                                                            استارت آپ </label>
+                                                        <label><input class="uk-checkbox" type="checkbox"> توسعه
+                                                            استارتاپ </label>
                                                     </div>
                                                     <div class="check_style1">
                                                         <label><input class="uk-checkbox" type="checkbox">طراحی</label>
@@ -129,6 +128,11 @@
                                                     </div>
                                                 </li>
                                             </ul>
+                                        </li>
+                                        <li class="fs1_item uk-width-1-1">
+                                            <label class="fs1_label opt" for="p6">مهمترین دستاورد شما تا حالا چه چیزی
+                                                بوده ؟ </label>
+                                            <textarea id="p6" data-autosize></textarea>
                                         </li>
                                     </ul>
                                 </div>
