--- a/apply-step2.html
+++ b/apply-step2.html
@@ -36,7 +36,7 @@
                                 <div class="pts1_step">
                                     <span class="pts1_shape"></span>
                                     <span class="pts1_text">
-                                        اطلاعات استارت آپ
+                                        اطلاعات استارتاپ
                                     </span>
                                 </div>
                             </li>
@@ -47,8 +47,8 @@
                             <div class="fg1_inner">
                                 <div class="form_style1">
                                     <ul data-uk-grid>
-                                        <li class="fs1_item uk-width-1-1">
-                                            <div class="uk-grid uk-child-width-1-2">
+                                        <li class="fs1_item uk-width-1-1" data-wrapper-member>
+                                            <div class="uk-grid uk-child-width-1-2 uk-position-relative" data-item-member>
                                                 <div>
                                                     <label class="fs1_label" for="t0">نام و نام خانوادگی</label>
                                                     <input type="text" id="t0" autocomplete="off"/>
@@ -57,46 +57,7 @@
                                                     <label class="fs1_label " for="t7">سمت در تیم</label>
                                                     <input type="text" id="t7" autocomplete="off"/>
                                                 </div>
-                                            </div>
-                                            <div class="uk-grid uk-child-width-1-2">
-                                                <div>
-                                                    <label class="fs1_label" for="t2">نام و نام خانوادگی</label>
-                                                    <input type="text" id="t2" autocomplete="off"/>
-                                                </div>
-                                                <div>
-                                                    <label class="fs1_label " for="t8">سمت در تیم</label>
-                                                    <input type="text" id="t8" autocomplete="off"/>
-                                                </div>
-                                            </div>
-                                            <div class="uk-grid uk-child-width-1-2">
-                                                <div>
-                                                    <label class="fs1_label" for="t3">نام و نام خانوادگی</label>
-                                                    <input type="text" id="t3" autocomplete="off"/>
-                                                </div>
-                                                <div>
-                                                    <label class="fs1_label " for="t9">سمت در تیم</label>
-                                                    <input type="text" id="t9" autocomplete="off"/>
-                                                </div>
-                                            </div>
-                                            <div class="uk-grid uk-child-width-1-2">
-                                                <div>
-                                                    <label class="fs1_label" for="t4">نام و نام خانوادگی</label>
-                                                    <input type="text" id="t4" autocomplete="off"/>
-                                                </div>
-                                                <div>
-                                                    <label class="fs1_label " for="t10">سمت در تیم</label>
-                                                    <input type="text" id="t10" autocomplete="off"/>
-                                                </div>
-                                            </div>
-                                            <div class="uk-grid uk-child-width-1-2">
-                                                <div>
-                                                    <label class="fs1_label" for="t5">نام و نام خانوادگی</label>
-                                                    <input type="text" id="t5" autocomplete="off"/>
-                                                </div>
-                                                <div>
-                                                    <label class="fs1_label " for="t6">سمت در تیم</label>
-                                                    <input type="text" id="t6" autocomplete="off"/>
-                                                </div>
+                                                <a class="uk-button uk-button-text fs1_action add" data-action-member='add'>افزودن</a>
                                             </div>
                                         </li>
                                         <li class="fs1_item uk-width-1-1">
@@ -110,7 +71,7 @@
                                                     <textarea id="t11" data-autosize></textarea>
                                                 </div>
                                                 <div>
-                                                    <label class="fs1_label req" for="t12">تعداد افراد شاغل در استارت آپ</label>
+                                                    <label class="fs1_label req" for="t12">تعداد افراد شاغل در استارتاپ</label>
                                                     <input type="text" id="t12" autocomplete="off"/>
                                                 </div>
                                                 <div>
