working in dynamic visibility input yes no question

--- a/apply-step3.html
+++ b/apply-step3.html
@@ -601,7 +601,21 @@
                                             <label class="fs1_label req" for="s3">آیا نسخه نمایشی/وبسایت/ نمونه آزمایشی
                                                 وجود
                                                 دارد ؟</label>
-                                            <input type="text" id="s3" autocomplete="off"/>
+                                            <div class="uk-display-inline-block uk-margin-small-right">
+                                                <div class="uk-display-inline-block check_style1">
+                                                    <label>
+                                                        <input class="uk-radio" type="radio" name="trial_v" data-active="#s3"/>
+                                                        بله
+                                                    </label>
+                                                </div>
+                                                <div class="uk-display-inline-block check_style1 uk-margin-small-right">
+                                                    <label>
+                                                        <input class="uk-radio" type="radio" name="trial_v"/>
+                                                        خیر
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <input type="text" id="s3" autocomplete="off" hidden/>
                                         </li>
                                         <!--<li class="fs1_item uk-width-1-1">
                                             <label class="fs1_label req" for="s4">توضیح دهید که چرا این ایده را انتخاب
