--- a/apply.html
+++ b/apply.html
@@ -65,7 +65,14 @@
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
                                             <label class="fs1_label" for="p3">وضعیت نظام وظیفه</label>
-                                            <input type="text" id="p3" autocomplete="off"/>
+                                            <!--<input type="text" id="p3" autocomplete="off"/>-->
+                                            <select name="" id="p3">
+                                                <option disabled selected>-- انتخاب نمایید --</option>
+                                                <option value="0">معافیت دائم</option>
+                                                <option value="1">معافیت موقت</option>
+                                                <option value="2">مشمول</option>
+                                                <option value="3">اتمام خدمت</option>
+                                            </select>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
                                             <label class="fs1_label" for="p4">شماره همراه</label>
