--- a/apply-step3.html
+++ b/apply-step3.html
@@ -54,7 +54,9 @@
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
                                             <label class="fs1_label req" for="s1">تاریخ شروع فعالیت</label>
-                                            <input type="text" id="s1" autocomplete="off"/>
+                                            <div data-wrapper-start>
+                                                <input type="text" class="uk-text-center" readOnly id="s1" autocomplete="off"/>
+                                            </div>
                                         </li>
                                         <li class="fs1_item uk-width-1-1">
                                             <label class="fs1_label req" for="s2">معرفی استارتاپ</label>
@@ -711,6 +713,11 @@
 <script src="_js/jquery-3.3.1.min.js"></script>
 <script src="_framework/uikit-3.0.0/js/uikit.min.js"></script>
 <script src="_js/pages/apply.js"></script>
+<script src="_plugin/moment/moment.min.js"></script>
+<script src="_plugin/moment-jalaali/moment-jalaali.js"></script>
+<script src="_plugin/persian_datepicker/daterangepicker-fa-ex.js"></script>
+<link rel="stylesheet" href="_plugin/persian_datepicker/daterangepicker.css">
+<link rel="stylesheet" href="_plugin/persian_datepicker/date_rangepicker_persian.css">
 
 </body>
 </html>
