--- a/apply.html
+++ b/apply.html
@@ -48,39 +48,84 @@
                                 <div class="form_style1">
                                     <ul data-uk-grid>
                                         <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label" for="p0">نام و نام خانوادگی</label>
+                                            <label class="fs1_label" for="p0">نام </label>
                                             <input type="text" id="p0" autocomplete="off"/>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label" for="p9">مقطع تحصیلی</label>
-                                            <input type="text" id="p9" autocomplete="off"/>
+                                            <label class="fs1_label" for="p00">نام خانوادگی</label>
+                                            <input type="text" id="p00" autocomplete="off"/>
                                         </li>
-                                        <li class="fs1_item uk-width-1-2">
+                                        <li class="fs1_item uk-width-1-3">
+                                            <label class="fs1_label" for="p9">مقطع تحصیلی</label>
+                                            <select name="" id="p9">
+                                                <option disabled selected>-- انتخاب نمایید --</option>
+                                                <option value="0">دیپلم</option>
+                                                <option value="1">کارشناسی</option>
+                                                <option value="2">کارشناسی ارشد</option>
+                                                <option value="3">دکتری</option>
+                                                <option value="5">سایر ...</option>
+                                            </select>
+                                        </li>
+                                        <li class="fs1_item uk-width-1-3">
+                                            <label class="fs1_label" for="p2">دانشگاه</label>
+                                            <select name="" id="p2">
+                                                <option disabled selected>-- انتخاب نمایید --</option>
+                                                <option value="0">تهران</option>
+                                                <option value="1">شهید بهشتی</option>
+                                                <option value="2">شریف</option>
+                                                <option value="3">امیر کبیر</option>
+                                                <option value="4">خواجه نصیر</option>
+                                                <option value="5">علامه طباطبایی</option>
+                                                <option value="6">آزاد</option>
+                                                <option value="7">سایر ...</option>
+                                            </select>
+                                        </li>
+                                        <li class="fs1_item uk-width-1-3">
                                             <label class="fs1_label" for="p1">رشته تحصیلی</label>
                                             <input type="text" id="p1" autocomplete="off"/>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label" for="p2">دانشگاه</label>
-                                            <input type="text" id="p2" autocomplete="off"/>
-                                        </li>
-                                        <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label" for="p3">وضعیت نظام وظیفه</label>
-                                            <!--<input type="text" id="p3" autocomplete="off"/>-->
-                                            <select name="" id="p3">
-                                                <option disabled selected>-- انتخاب نمایید --</option>
-                                                <option value="0">معافیت دائم</option>
-                                                <option value="1">معافیت موقت</option>
-                                                <option value="2">مشمول</option>
-                                                <option value="3">اتمام خدمت</option>
-                                            </select>
+                                            <label class="fs1_label" for="p5">نشانی ایمیل</label>
+                                            <input type="text" id="p5" autocomplete="off"/>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
                                             <label class="fs1_label" for="p4">شماره همراه</label>
                                             <input type="text" id="p4" autocomplete="off"/>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
-                                            <label class="fs1_label" for="p5">نشانی ایمیل</label>
-                                            <input type="text" id="p5" autocomplete="off"/>
+                                            <label class="fs1_label" for="p33">
+                                                جنسیت
+                                            </label>
+                                            <div class="uk-display-inline-block uk-margin-small-right">
+                                                <div class="uk-display-inline-block check_style1">
+                                                    <label>
+                                                        <input class="uk-radio"
+                                                               type="radio"
+                                                               name="gender"
+                                                               data-target-input="#p33" data-action-input="show"/>
+                                                        مرد
+                                                    </label>
+                                                </div>
+                                                <div class="uk-display-inline-block check_style1 uk-margin-small-right">
+                                                    <label>
+                                                        <input class="uk-radio"
+                                                               type="radio"
+                                                               name="gender"
+                                                               data-target-input="#p33" data-action-input="hidden"/>
+                                                        زن
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div id="p33" style="display:none">
+                                                <label class="fs1_label" for="p3">وضعیت نظام وظیفه</label>
+                                                <select name="" id="p3">
+                                                    <option disabled selected>-- انتخاب نمایید --</option>
+                                                    <option value="0">معافیت دائم</option>
+                                                    <option value="1">معافیت موقت</option>
+                                                    <option value="2">مشمول</option>
+                                                    <option value="3">اتمام خدمت</option>
+                                                </select>
+                                            </div>
                                         </li>
                                         <li class="fs1_item uk-width-1-2">
                                             <label class="fs1_label">تخصص شما در کدام حوزه است ؟</label>
